# maestro

./: .gitignore  .gitlab-ci.yml  .pre-commit-hooks.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.gitlab/ci_template/: environment.yml  packaging.yml  tests.yml
.gitlab/issue_templates/: Bug.md  Task.md
src/maestro/: __init__.py  __main__.py  phimecabase.py  pyprojecttoml.py
src/maestro/cfg/: flake8
src/maestro/gitlab/ci_template/: environment.yml  linting.yml  packaging.yml  tests.yml
src/maestro/vscode/: settings.json
