[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
keywords = ["maestro", "black", "ruff", "isort", "mypy", "pytest"]
name = "maestro"
authors = [{ name = "El Hadi Moussi", email = "moussi@phimeca.com" }]
description = "Run commands to manage a python package."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "typer",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
    "black",
    "isort[requirements_deprecated_finder]",
    "wheel",
]
dynamic = ["version"]

[project.scripts]
maestro = "maestro.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["maestro"]
exclude = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "maestro.__version__" }

[tool.black]
line-length = 95
