[metadata]
name = maestro
version = attr: maestro.__version__
author = El Hadi Moussi
author_email = moussi@phimeca.com
description = Run commands to manage a python package.
long_description = file: README.md
keywords = widgets, pyqt, mvp

[options]
include_package_data = True
package_dir = 
    =src
# packages = find:
python_requires = >=3.6
install_requires =
    typer
    pytest
    pytest-cov
    pytest-xdist
    mypy
    black
    isort[requirements_deprecated_finder]
    wheel
    flake8 == 4.0.1
    flake8-self
    flake8-use-pathlib
    flake8-simplify
    flake8-debugger
    flake8-pie
    flake8-print
    flake8-pyi
    flake8-pytest-style
    flake8-raise
    flake8-return
