[metadata]
name = maestro
version = attr: maestro.__version__
author = El Hadi Moussi
author_email = moussi@phimeca.com
description = Run commands to manage a python package.
long_description = file: README.md
keywords = maestro, black, ruff, isort, mypy, pytest

[options]
include_package_data = True
package_dir = 
    =src
packages =
    maestro
python_requires = <3.7
install_requires =
    importlib-metadata;python_version<'3.8'
    typer
    rich
    pytest
    pytest-cov
    pytest-xdist
    mypy
    black
    isort[requirements_deprecated_finder]
    wheel
    toml
    types-toml

[options.package_data]
* = *.html

[options.entry_points]
console_scripts =
    maestro = maestro.__main__:app